force-app/main/default/objects/Product2/fields/MESSENGER__Production_Time__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Production_Time__c</fullName>
    <label>Production Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>