force-app/main/default/objects/Product2/fields/MESSENGER__Stock__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Stock__c</fullName>
    <label>Stock</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>