force-app/main/default/objects/Product2/fields/Product_New_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_New_Date__c</fullName>
    <label>Product New Date</label>
    <type>DateTime</type>
</CustomField>