force-app/main/default/objects/Product2/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <label>Specification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>